--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
 <body>
     <!-- 1ª Dobra: Marca e Headline -->
-    <section id="home" class="dobra dobra1">
-        <div class="overlay">
+<section id="home" class="dobra dobra1">
+    <div class="overlay">
         <h1 class="marca">
             <img src="https://pbs.twimg.com/media/GcLuVcuWwAAsJ-S?format=png&name=360x360" alt="Logo Sprayer Drones" class="logo">
             <img src="https://pbs.twimg.com/media/GcLyDqMWYAAaKlm?format=png&name=small" alt="Imagem adicional" class="imagem-adicional">
@@ -45,52 +45,52 @@
 
         <!-- Nova Seção: Black Friday -->
         <div class="black-friday dobra">
-            <h2>🤑💥BLACK FRIDAY💥🤑</h2>
-            <h3>Orce agora acima de 300 equitares e ganhe um software!!!</h3>
+            <h2>BLACK FRIDAY</h2>
+            <h3>Orce agora acima de 300 hectares e ganhe um software!!!</h3>
             <p>Clique no "Serviços" acima e escolha.</p>
         </div>
+    </div>
+</section>
+
+<!-- 2ª Dobra: Benefícios -->
+<section id="beneficios" class="dobral">
+    <h2 class="titulo-espacado">Benefícios de Pulverização com Drones</h2>
+    <div class="cards">
+        <div class="card">
+            <img src="https://pbs.twimg.com/media/GcNUOguXcAAzvKv?format=png&name=small" alt="Ícone Eficiência no uso de insumos" class="card-icon">
+            <h3>Eficiência no uso de insumos</h3>
+            <p>Redução significativa no consumo de produtos devido à aplicação precisa e uniforme.</p>
         </div>
-    </section>
-
-   <!-- 2ª Dobra: Benefícios -->
-    <section id="beneficios" class="dobral">
-        <h2 class="titulo-espacado">Benefícios de Pulverização com Drones</h2>
-        <div class="cards">
-            <div class="card">
-                <img src="https://pbs.twimg.com/media/GcNUOguXcAAzvKv?format=png&name=small" alt="Ícone Eficiência no uso de insumos" class="card-icon">
-                <h3>Eficiência no uso de insumos</h3>
-                <p>Redução significativa no consumo de produtos devido à aplicação precisa e uniforme.</p>
-            </div>
-            <div class="card">
-                <img src="https://pbs.twimg.com/media/GcNUOgvXkAEI7ZG?format=png&name=240x240" alt="Ícone Redução do impacto ambiental" class="card-icon">
-                <h3>Redução do impacto ambiental</h3>
-                <p>Menos resíduos químicos e menor contaminação do solo e da água.</p>
-            </div>
-            <div class="card">
-                <img src="https://pbs.twimg.com/media/GcNUOVJWAAA4QAq?format=png&name=360x360" alt="Ícone Cobertura uniforme e controle de altura" class="card-icon">
-                <h3>Cobertura uniforme e controle de altura</h3>
-                <p>Aplicação de produtos em altura constante, garantindo distribuição uniforme.</p>
-            </div>
-            <div class="card">
-                <img src="https://pbs.twimg.com/media/GcNUOgsX0AA-mbR?format=png&name=240x240" alt="Ícone Livre de Amassamento" class="card-icon">
-                <h3>Livre de Amassamento</h3>
-                <p>Proteção do solo e das culturas, eliminando danos causados por maquinário pesado.</p>
-            </div>
+        <div class="card">
+            <img src="https://pbs.twimg.com/media/GcNUOgvXkAEI7ZG?format=png&name=240x240" alt="Ícone Redução do impacto ambiental" class="card-icon">
+            <h3>Redução do impacto ambiental</h3>
+            <p>Menos resíduos químicos e menor contaminação do solo e da água.</p>
         </div>
-    </section>
+        <div class="card">
+            <img src="https://pbs.twimg.com/media/GcNUOVJWAAA4QAq?format=png&name=360x360" alt="Ícone Cobertura uniforme e controle de altura" class="card-icon">
+            <h3>Cobertura uniforme e controle de altura</h3>
+            <p>Aplicação de produtos em altura constante, garantindo distribuição uniforme.</p>
+        </div>
+        <div class="card">
+            <img src="https://pbs.twimg.com/media/GcNUOgsX0AA-mbR?format=png&name=240x240" alt="Ícone Livre de Amassamento" class="card-icon">
+            <h3>Livre de Amassamento</h3>
+            <p>Proteção do solo e das culturas, eliminando danos causados por maquinário pesado.</p>
+        </div>
+    </div>
+    <a href="#produtos" class="btn">Serviços</a>
+</section>
 
-    <!-- Outras dobras seguem o mesmo padrão -->
-
-    <!-- 3ª Dobra: Como Funciona -->
-    <section id="como-funciona" class="dobra dobra3">
-        <h2>Como funciona a Pulverização por Drone?</h2>
-        <ul>
-            <li><strong>Planejamento e Mapeamento:</strong> O drone realiza um mapeamento da área agrícola, utilizando sensores para identificar as necessidades de pulverização, garantindo uma aplicação precisa.</li>
-            <li><strong>Programação e Rota:</strong> O drone é programado para seguir uma rota definida, ajustando altura de voo e intensidade de pulverização conforme as características da lavoura.</li>
-            <li><strong>Pulverização:</strong> O drone aplica o insumo com precisão através de bicos controlados eletronicamente, garantindo uma distribuição eficiente nas plantas.</li>
-            <li><strong>Monitoramento em Tempo Real:</strong> Sensores no drone permitem o monitoramento da saúde das plantas, fornecendo dados que ajudam na tomada de decisões rápidas e eficazes.</li>
-        </ul>
-    </section>
+<!-- 3ª Dobra: Como Funciona -->
+<section id="como-funciona" class="dobra dobra3">
+    <h2>Como funciona a Pulverização por Drone?</h2>
+    <ul>
+        <li><strong>Planejamento e Mapeamento:</strong> O drone realiza um mapeamento da área agrícola, utilizando sensores para identificar as necessidades de pulverização, garantindo uma aplicação precisa.</li>
+        <li><strong>Programação e Rota:</strong> O drone é programado para seguir uma rota definida, ajustando altura de voo e intensidade de pulverização conforme as características da lavoura.</li>
+        <li><strong>Pulverização:</strong> O drone aplica o insumo com precisão através de bicos controlados eletronicamente, garantindo uma distribuição eficiente nas plantas.</li>
+        <li><strong>Monitoramento em Tempo Real:</strong> Sensores no drone permitem o monitoramento da saúde das plantas, fornecendo dados que ajudam na tomada de decisões rápidas e eficazes.</li>
+    </ul>
+    <a href="#produtos" class="btn">Serviços</a>
+</section>
 
     <!-- 4ª Dobra: Produtos -->
     <section id="produtos" class="dobra dobra-cinza">
@@ -134,16 +134,18 @@
         <p>"Tecnologia que trouxe mais segurança e eficiência."</p>
     </section>
 
-   <!-- 6ª Dobra: CTA -->
-   <section id="contato" class="dobra dobra-cinza">
-    <div class="container">
-        <h2>Deseja melhorar o rendimento e a qualidade da sua pulverização?</h2>
-        <a href="https://wa.me/62998554057" class="btn">Fale Conosco</a>
-        <div class="social-links">
-            <a href="https://www.instagram.com/sprayerdrones/">Instagram</a> | 
-            <a href="https://www.facebook.com/sprayerdronesbr?locale=pt_BR">Facebook</a>
+    <!-- 6ª Dobra: CTA -->
+    <section id="contato" class="dobra dobra-cinza">
+        <div class="container">
+            <h2>Deseja melhorar o rendimento e a qualidade da sua pulverização?</h2>
+            <a href="https://wa.me/62998554057" class="btn">Fale Conosco</a>
+            <div class="social-links">
+                <a href="https://www.instagram.com/sprayerdrones/">Instagram</a> | 
+                <a href="https://www.facebook.com/sprayerdronesbr?locale=pt_BR">Facebook</a>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 </body>
 </html>
+
+                
