--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
 
 <body>
     <!-- 1ª Dobra: Marca e Headline -->
-<section id="home" class="dobra dobra1">
-    <div class="overlay">
-        <h1 class="marca">
-            <img src="https://pbs.twimg.com/media/GcLuVcuWwAAsJ-S?format=png&name=360x360" alt="Logo Sprayer Drones" class="logo">
-            <img src="https://pbs.twimg.com/media/GcLyDqMWYAAaKlm?format=png&name=small" alt="Imagem adicional" class="imagem-adicional">
-        </h1>
-        <h2>Revolucione sua Colheita com Pulverização com Drones</h2>
-        <p>Mais Economia e cuidado com o meio ambiente: Pulverização aérea precisa e livre de amassamento, protegendo a qualidade do solo e aumentando a eficiência no campo.</p>
-        <a href="#produtos" class="btn">Serviços</a>
-
-        <!-- Nova Seção: Black Friday -->
-        <div class="black-friday dobra">
-            <h2>BLACK FRIDAY</h2>
-            <h3>Orce agora acima de 300 hectares e ganhe um software!!!</h3>
-            <p>Clique no "Serviços" acima e escolha.</p>
+    <section id="home" class="dobra dobra1">
+        <div class="overlay">
+            <div class="marca">
+                <img src="https://pbs.twimg.com/media/GcLuVcuWwAAsJ-S?format=png&name=360x360" alt="Logo Sprayer Drones" class="logo">
+                <img src="https://pbs.twimg.com/media/GcLyDqMWYAAaKlm?format=png&name=small" alt="Imagem adicional" class="imagem-adicional">
+            </div>
+            <div class="headline-container">
+                <h2 class="headline">Revolucione sua Colheita com Pulverização com Drones</h2>
+                <p class="subheadline">Economize e cuide do meio ambiente com pulverização aérea precisa, protegendo o solo e aumentando a eficiência no campo.</p>
+                <a href="#produtos" class="btn">Serviços</a>
+            </div>
+            <div class="black-friday dobra">
+                <h2 class="bf-title">BLACK FRIDAY</h2>
+                <h3 class="bf-subtitle">Orce agora acima de 300 hectares e ganhe um software!</h3>
+                <p>Clique no botão acima e escolha.</p>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
 <!-- 2ª Dobra: Benefícios -->
 <section id="beneficios" class="dobral">
@@ -148,24 +148,24 @@
         // Dados das avaliações (adicionados manualmente)
         const reviews = [
             {
-                author: "João Silva",
+                author: "Elimar Silva Ribeiro",
                 rating: 5,
-                text: "Excelente atendimento! Fiquei muito satisfeito com o serviço."
+                text: "Olá, só tenho que falar q foi muito bom, minha minha experiência no trabalho junto com vcs eu recomendo vc, no qual quer lugar, vcs são top."
             },
             {
-                author: "Maria Oliveira",
-                rating: 4,
-                text: "Ótimo lugar! Apenas achei que poderia ter mais opções no cardápio."
-            },
-            {
-                author: "Carlos Mendes",
+                author: "Tatiana Novais",
                 rating: 5,
-                text: "Ambiente muito agradável e equipe super profissional. Recomendo!"
+                text: "Excelente profissional, de extrema confiança, serviço prestado de primeira qualidade."
             },
             {
-                author: "Ana Pereira",
-                rating: 4.5,
-                text: "Gostei bastante, mas tive que esperar um pouco para ser atendida."
+                author: "Weliton dos Santos",
+                rating: 5,
+                text: "Excelente trabalho, cumpriu 100% do prometido com eficiência e qualidade."
+            },
+            {
+                author: "Nubia Costa",
+                rating: 5,
+                text: "Parabéns, pelo profissionalismo e qualidade dos serviços prestados pela empresa. Fica aqui, a minha indicação."
             }
         ];
     
